[package]
name = "gfx-render"
version = "0.1.0"
authors = ["Zakarum <scareaangel@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/gfx-rs/gfx-render.git"
documentation = "https://docs.rs/crate/gfx-render/0.1.0/gfx-render"

[dependencies]
crossbeam-channel = "0.1"
failure = "0.1"
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "a3475a75c", features = ["serde"] }
gfx-memory = { git = "https://github.com/gfx-rs/gfx-memory", rev = "c04c10d" }
log = "0.4"
winit = "0.12"

gfx-backend-empty = { version = "0.1", git = "https://github.com/gfx-rs/gfx", rev = "a3475a75c" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
gfx-backend-vulkan = { version = "0.1", optional = true, git = "https://github.com/gfx-rs/gfx", rev = "a3475a75c" }

[target.'cfg(target_os = "macos")'.dependencies]
gfx-backend-metal = { version = "0.1", optional = true, git = "https://github.com/gfx-rs/gfx", rev = "a3475a75c" }

[target.'cfg(windows)'.dependencies]
gfx-backend-dx12 = { version = "0.1", optional = true, git = "https://github.com/gfx-rs/gfx", rev = "a3475a75c" }
