[package]
name = "gfx-render"
version = "0.1.0"
authors = ["Zakarum <scareaangel@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/gfx-rs/gfx-render.git"
documentation = "https://docs.rs/crate/gfx-render/0.1.0/gfx-render"

[features]
profile = ["flame"]

[dependencies]
crossbeam-channel = "0.1"
failure = "0.1"
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "1e959ace6", features = ["serde"] }
gfx-memory = { git = "https://github.com/gfx-rs/gfx-memory", rev = "2d26766" }
log = "0.4"
winit = "0.13"
flame = { version = "0.2", optional = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
gfx-backend-vulkan = { version = "0.1", optional = true, git = "https://github.com/gfx-rs/gfx", rev = "1e959ace6" }

[target.'cfg(target_os = "macos")'.dependencies]
gfx-backend-metal = { version = "0.1", optional = true, git = "https://github.com/gfx-rs/gfx", rev = "1e959ace6" }

[target.'cfg(windows)'.dependencies]
gfx-backend-dx12 = { version = "0.1", optional = true, git = "https://github.com/gfx-rs/gfx", rev = "1e959ace6" }
